fixes the blog alignment by wrapping a few divs correctly

--- a/resources/public/css/custom.css
+++ b/resources/public/css/custom.css
@@ -42,3 +42,9 @@ section#contact {
   padding: 14px 24px;
   font-size: 21px;
 }
+
+.blog-post .codehilite { background-color: #49483e
+                         }
+
+.blog-post .hll { background-color: #49483e
+                  }
